Openshift/services/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
  labels:
    app: db
spec:
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
  selector:
    app: mysql
  clusterIP: None
